# worldbox

./: .gitignore  Cargo.toml  terrain.py
src/: camera.rs  entity.rs  faction.rs  lib.rs  main.rs  map.rs
src/engine/: autotile.rs  border_outline.rs  camera.rs  consts.rs  coords.rs  fps.rs  mapgen.rs  mod.rs  painting.rs  prop.rs  spawn.rs  spritesheet.rs  tile.rs
src/engine/prop/: colored_sprites.rs  mod.rs  spawn.rs
src/engine/rendering/: autotile.rs  border_outline.rs  color_utils.rs  macro_map.rs  mod.rs  tilemap.rs
