[package]
name = "worldbox"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    # Core
    "bevy_asset",
    "bevy_state",
    "bevy_winit", 
    "bevy_core_pipeline",
    "bevy_render",
    
    # 2D
    "bevy_sprite", 
    "bevy_text",  
    "bevy_ui", 
    
    # Audio/images
    "vorbis", 
    "png",  
    
    "dynamic_linking"
] }
pathfinding = "4.14.0"
noise = { version = "0.9.0", features = ["images"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
