[package]
name = "worldbox"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1" }
pathfinding = "4.15.0"
noise = { version = "0.9.0", features = ["images"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"