[package]
name = "worldbox"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1" }
rand = "0.10.0"
rand_chacha = "0.10.0"
rayon = "1.11.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"